--- a/ViewModel/ContentDetail.xaml
+++ b/ViewModel/ContentDetail.xaml
@@ -6,7 +6,7 @@
       mc:Ignorable="d" 
       Title="ContentDetail">
     <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="{StaticResource BlackOp100}">
-    <Grid  VerticalAlignment="Center" HorizontalAlignment="Stretch" >
+    <Grid  VerticalAlignment="Top" HorizontalAlignment="Stretch" >
         <Grid Panel.ZIndex="2">
             <Grid.Background>
                 <SolidColorBrush Color="Black" Opacity="0.8"/>
